Fixed visibility of the option for show request. Changed emojis for recomendation by recipe. --skip-ci

--- a/ui/src/app/recipes/view-recipe/view-recipe.component.scss
+++ b/ui/src/app/recipes/view-recipe/view-recipe.component.scss
@@ -208,19 +208,6 @@ body .no-padding {
   margin-right: 7px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 .like {
   background-color: #fc4a1a;
   color: white;
@@ -228,7 +215,7 @@ body .no-padding {
 
 .like-button {
   vertical-align: text-bottom;
-  background-color: #fc4a1a;
+  background-color: $gray-white;
   color: white;
   line-height: 0.75;
 }
